--- a/mean/package.json
+++ b/mean/package.json
@@ -24,11 +24,12 @@
     "@angular/platform-browser": "^9.1.4",
     "@angular/platform-browser-dynamic": "^9.1.4",
     "@angular/router": "^9.1.4",
+    "axios": "^0.21.0",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
-    "cors": "^2.8.4",
+    "cors": "^2.8.5",
     "dotenv": "^6.0.0",
     "events": "^3.0.0",
     "express": "^4.16.3",
@@ -43,6 +44,7 @@
     "method-override": "^2.3.10",
     "mongoose": "^5.7.5",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^1.17.5",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
